# telegram_for_crag

./: .env  .gitignore  pyproject.toml  readme.md
bot/: create_bot.py  settings.py
docker/: Dockerfile
